--- a/dashboard.html
+++ b/dashboard.html
@@ -110,39 +110,39 @@
 
     function getSummary() {
       let aLabels = ["country", "Confirmed", "Deaths", "Recovered"];
-      // $.getJSON(sBaseUrl + 'csse-jhu/summary/table/global')
-      //   .done(function (oData) {
-      //     fillTable(oData);
-      //     $("#spinner-summary").removeClass('visible');
-      //     $("#spinner-summary").addClass('invisible');
-      //     $(".summary").removeClass('invisible');
-      //     $(".summary").addClass('visible');
-      //   })
-      //   .fail(function (oError) {
-      //     console.log(oError);
-      //   });
-      // $.getJSON(sBaseUrl + 'csse-jhu/summary/graph/new')
-      //   .done(function (oData) {
-      //     new Chart($("#globalNew"), oData);
-      //     $("#spinner-summary").removeClass('visible');
-      //     $("#spinner-summary").addClass('invisible');
-      //     $(".summary").removeClass('invisible');
-      //     $(".summary").addClass('visible');
-      //   })
-      //   .fail(function (oError) {
-      //     console.log(oError);
-      //   });
-      // $.getJSON(sBaseUrl + 'csse-jhu/summary/graph/total')
-      //   .done(function (oData) {
-      //     new Chart($("#globalTotal"), oData);
-      //     $("#spinner-summary").removeClass('visible');
-      //     $("#spinner-summary").addClass('invisible');
-      //     $(".summary").removeClass('invisible');
-      //     $(".summary").addClass('visible');
-      //   })
-      //   .fail(function (oError) {
-      //     console.log(oError);
-      //   });
+      $.getJSON(sBaseUrl + 'csse-jhu/summary/table/global')
+        .done(function (oData) {
+          fillTable(oData);
+          $("#spinner-summary").removeClass('visible');
+          $("#spinner-summary").addClass('invisible');
+          $(".summary").removeClass('invisible');
+          $(".summary").addClass('visible');
+        })
+        .fail(function (oError) {
+          console.log(oError);
+        });
+      $.getJSON(sBaseUrl + 'csse-jhu/summary/graph/new')
+        .done(function (oData) {
+          new Chart($("#globalNew"), oData);
+          $("#spinner-summary").removeClass('visible');
+          $("#spinner-summary").addClass('invisible');
+          $(".summary").removeClass('invisible');
+          $(".summary").addClass('visible');
+        })
+        .fail(function (oError) {
+          console.log(oError);
+        });
+      $.getJSON(sBaseUrl + 'csse-jhu/summary/graph/total')
+        .done(function (oData) {
+          new Chart($("#globalTotal"), oData);
+          $("#spinner-summary").removeClass('visible');
+          $("#spinner-summary").addClass('invisible');
+          $(".summary").removeClass('invisible');
+          $(".summary").addClass('visible');
+        })
+        .fail(function (oError) {
+          console.log(oError);
+        });
       $.getJSON(sBaseUrl + 'csse-jhu/summary/table/countries')
         .done(function (oData) {
           fillCountryTable(oData, aLabels, "New");
