--- a/country.html
+++ b/country.html
@@ -47,7 +47,7 @@
           <div class="spinner-border" role="status"></div>
         </div>
 
-        <div class="table-responsive">
+        <div class="table-responsive invisible">
           <table class="table table-striped table-sm">
             <thead>
               <tr>
@@ -83,13 +83,13 @@
           <div class="spinner-border" role="status"></div>
         </div>
 
-        <div class="row">
+        <div class="row invisible">
           <div class="col">
             <canvas class="my-4" id="global" width="900" height="380"></canvas>
           </div>
         </div>
 
-        <div class="table-responsive">
+        <div class="table-responsive invisible">
           <table class="table table-striped table-sm">
             <thead>
               <tr id="table-labels"></tr>
