Loop over all records and add new numbers

--- a/country.html
+++ b/country.html
@@ -153,6 +153,15 @@
         },
         combined: []
       };
+
+      aRecords.forEach(oRecord => {
+        let oCombined = {
+          date: new Date(oRecord.date),
+          newCases: oRecord.cases,
+          newDeaths: oRecord.deaths
+        };
+        oStatistics.combined.push(oCombined);
+      });
     }
 
     function fillTable(oCountry) {
