--- a/country.html
+++ b/country.html
@@ -178,7 +178,14 @@
 
     function fillTable(oCountry) {
       let oNumberFormat = new Intl.NumberFormat('nl-BE'),
-        oPercFormat = new Intl.NumberFormat('nl-BE', { style: 'percent', maximumFractionDigits: 2 });
+        oPercFormat = new Intl.NumberFormat('nl-BE', { style: 'percent', maximumFractionDigits: 2 }),
+        oLabels = $('#table-labels'),
+        oRows = $('#table-rows');
+
+      window.aLabels.forEach(sLabel => {
+        oLabels.append('<th>' + sLabel + '</th>');
+      });
+
       for (let sProp in oCountry.summary) {
         if (oCountry.summary.hasOwnProperty(sProp)) {
           let oElement = $('#' + sProp);
