Adjust labels to be in line with data

--- a/country.html
+++ b/country.html
@@ -183,7 +183,9 @@
         oRows = $('#table-rows');
 
       window.aLabels.forEach(sLabel => {
-        oLabels.append('<th>' + window.oTranslations[sLabel] + '</th>');
+        sLabel === 'date' ?
+          oLabels.append('<th>' + window.oTranslations[sLabel] + '</th>') :
+          oLabels.append('<th class="text-right">' + window.oTranslations[sLabel] + '</th>');
       });
 
       oCountry.combined.forEach(oRow => {
